Change response pattern

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 upstream api {
     server server-01:8001 weight=3;
-    server server-02:8002;
+    server server-02:8002 max_fails=5 fail_timeout=30s;
     server server-03:8003;
 }
 
